--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/image-removebg-preview (1).png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuillVerse</title>
+    <title>Blog</title>
   </head>
   <body>
     <div id="root"></div>
